@@ -48,6 +48,7 @@
                (:file "fdump")
 	       (:file "mode-line")
 	       (:file "color")
+               (:file "module")
 	       (:file "stumpwm")
 	       ;; keep this last so it always gets recompiled if
 	       ;; anything changes
