@@ -252,17 +252,3 @@ of those expired."
              (t 
               ;; the number is the unix return code
               (return-from stumpwm 0))))))
-
-;;; Contribs
-
-(defun load-contrib (name)
-  "Loads the contributed package with the given NAME."
-  ;; This should use ASDF in the future. And maybe there should be an
-  ;; extra stumpwm-contrib repository.
-  (load 
-   (asdf:system-relative-pathname (asdf:find-system :stumpwm) 
-				  (make-pathname :directory '(:relative "contrib")
-						 :name name
-						 :type "lisp"))))
-
-;;; EOF
