@@ -3,6 +3,8 @@
 This file documents user visible changes between versions of StumpWM
 
 * Changes since 0.9.4.1
+** new command load-module
+
 ** added install/uninstall Makefile rules
 
 ** added info command
